--- a/index.html
+++ b/index.html
@@ -435,19 +435,19 @@
 /* If you plan to support Safari 4 for any reason, you *must* have 0% and 100% frames */
 @-webkit-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @-moz-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @-ms-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }</pre>
         <h3>LESS</h3>
         <pre id="color-dissolve-less">
@@ -458,6 +458,9 @@
 @visibleItemDuration: 4s; // time during which a carousel item is fully visible
 @transitionDuration: 1s; // duration of the transition between two carousel items
 @dissolveColor: #000; // a color to dissolve through
+
+@oneItemDuration: @visibleItemDuration + 2 * @transitionDuration;
+@carouselPeriod: @oneItemDuration * @numberOfItems;
 
 .colorDissolve {
     position:relative;
@@ -472,28 +475,28 @@
         right:0;
         opacity: 0;
 
-        -webkit-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
-        -moz-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
-        -ms-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
-        animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
+        -webkit-animation: colorDissolve @carouselPeriod linear infinite;
+        -moz-animation: colorDissolve @carouselPeriod linear infinite;
+        -ms-animation: colorDissolve @carouselPeriod linear infinite;
+        animation: colorDissolve @carouselPeriod linear infinite;
 
         &:nth-child(2) {
-            -webkit-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
-            -moz-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
-            -ms-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
-            animation-delay: @visibleItemDuration + 2 * @transitionDuration;
+            -webkit-animation-delay: @oneItemDuration;
+            -moz-animation-delay: @oneItemDuration;
+            -ms-animation-delay: @oneItemDuration;
+            animation-delay: @oneItemDuration;
         }
         &:nth-child(3) {
-            -webkit-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
-            -moz-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
-            -ms-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
-            animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
+            -webkit-animation-delay: 2 * @oneItemDuration;
+            -moz-animation-delay: 2 * @oneItemDuration;
+            -ms-animation-delay: 2 * @oneItemDuration;
+            animation-delay: 2 * @oneItemDuration;
         }
         &:nth-child(4) {
-            -webkit-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
-            -moz-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
-            -ms-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
-            animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
+            -webkit-animation-delay: 3 * @oneItemDuration;
+            -moz-animation-delay: 3 * @oneItemDuration;
+            -ms-animation-delay: 3 * @oneItemDuration;
+            animation-delay: 3 * @oneItemDuration;
         }
     }
 }
@@ -505,19 +508,19 @@
 /* If you plan to support Safari 4 for any reason, you *must* have 0% and 100% frames */
 @-webkit-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @-moz-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @-ms-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }
 @keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
-    2.5%, 22.5% { opacity: 1;}
+    4.17%, 20.84% { opacity: 1;}
 }</pre>
     </div>
 </section>
@@ -640,6 +643,9 @@
 @visibleItemDuration: 4s; // time during which a carousel item is fully visible
 @transitionDuration: 1s; // duration of the transition between two carousel items
 
+@oneItemDuration: @visibleItemDuration + @transitionDuration;
+@carouselPeriod: @oneItemDuration * @numberOfItems;
+
 .dissolve {
     width:@width;
     height: @height;
@@ -652,28 +658,28 @@
         right:0;
         opacity: 0;
 
-        -webkit-animation: dissolve (@visibleItemDuration + @transitionDuration)*@numberOfItems linear infinite;
-        -moz-animation: dissolve (@visibleItemDuration + @transitionDuration)*@numberOfItems linear infinite;
-        -ms-animation: dissolve (@visibleItemDuration + @transitionDuration)*@numberOfItems linear infinite;
-        animation: dissolve (@visibleItemDuration + @transitionDuration)*@numberOfItems linear infinite;
+        -webkit-animation: dissolve @carouselPeriod linear infinite;
+        -moz-animation: dissolve @carouselPeriod linear infinite;
+        -ms-animation: dissolve @carouselPeriod linear infinite;
+        animation: dissolve @carouselPeriod linear infinite;
 
         &:nth-child(2) {
-            -webkit-animation-delay: @visibleItemDuration + @transitionDuration;
-            -moz-animation-delay: @visibleItemDuration + @transitionDuration;
-            -ms-animation-delay: @visibleItemDuration + @transitionDuration;
-            animation-delay: @visibleItemDuration + @transitionDuration;
+            -webkit-animation-delay: @oneItemDuration;
+            -moz-animation-delay: @oneItemDuration;
+            -ms-animation-delay: @oneItemDuration;
+            animation-delay: @oneItemDuration;
         }
         &:nth-child(3) {
-            -webkit-animation-delay: (@visibleItemDuration + @transitionDuration)*2;
-            -moz-animation-delay: (@visibleItemDuration + @transitionDuration)*2;
-            -ms-animation-delay: (@visibleItemDuration + @transitionDuration)*2;
-            animation-delay: (@visibleItemDuration + @transitionDuration)*2;
+            -webkit-animation-delay: 2 * @oneItemDuration;
+            -moz-animation-delay: 2 * @oneItemDuration;
+            -ms-animation-delay: 2 * @oneItemDuration;
+            animation-delay: 2 * @oneItemDuration;
         }
         &:nth-child(4) {
-            -webkit-animation-delay: (@visibleItemDuration + @transitionDuration)*3;
-            -moz-animation-delay: (@visibleItemDuration + @transitionDuration)*3;
-            -ms-animation-delay: (@visibleItemDuration + @transitionDuration)*3;
-            animation-delay: (@visibleItemDuration + @transitionDuration)*3;
+            -webkit-animation-delay: 3 * @oneItemDuration;
+            -moz-animation-delay: 3 * @oneItemDuration;
+            -ms-animation-delay: 3 * @oneItemDuration;
+            animation-delay: 3 * @oneItemDuration;
         }
     }
 }
