Updated JS-aware page with the most recent markup for the carousels

--- a/index_js.html
+++ b/index_js.html
@@ -31,13 +31,13 @@
     <div class="carouselWrapper">   
         <div class="carousel vertical">
             <div class="items">
-            <img src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
                  alt="" />
-            <img src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
                  alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
-                 alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
+                 alt="Banksy" />
+                <img class="item" src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
                  alt="Bristol autumn" />
              </div>
         </div>
@@ -114,13 +114,13 @@
     <div class="carouselWrapper">
         <div class="carousel horizontal">
             <div class="items">
-                <img src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
                      alt="" />
-                <img src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
                      alt="Seven to ten at Leeds & Holbeck" />
-                <img src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
-                     alt="Seven to ten at Leeds & Holbeck" />
-                <img src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
+                <img class="item" src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
+                     alt="Banksy" />
+                <img class="item" src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
                      alt="Bristol autumn" />
              </div>
         </div>
@@ -200,14 +200,14 @@
     <h2>Carousel with images dissolving through color</h2>
     <div class="carouselWrapper">
         <div class="carousel colorDissolve">
-            <img src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
+            <img class="item" src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
                  alt="" />
-            <img src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
+            <img class="item" src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
                  alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
-                 alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
-                 alt="Not so fishy fountain" />
+            <img class="item" src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
+                 alt="Banksy" />
+            <img class="item" src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
+                 alt="Bristol autumn" />
         </div>
         <ul class="support">
             <li class="chrome">14+</li>
@@ -292,14 +292,14 @@
     <p>To help you build this carousel animation (that is a little bit tricky), I have made <a href="http://tinyurl.com/7uqoa47" title="Instacalc calculator for the carousel's CSS animation">a calculator</a> with explanations and notes on how to use it. Use styles for this demo as an example and replace some values with the ones from the calculator to tune the carousel for your needs.</p>
     <div class="carouselWrapper">
         <div class="carousel dissolve">
-            <img src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
+            <img class="item" src="http://farm8.staticflickr.com/7020/6767599565_e0ffee2813_d.jpg"
                  alt="" />
-            <img src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
+            <img class="item" src="http://farm8.staticflickr.com/7016/6767598507_21720ed21f_d.jpg"
                  alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
-                 alt="Seven to ten at Leeds & Holbeck" />
-            <img src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
-                 alt="Not so fishy fountain" />
+            <img class="item" src="http://farm8.staticflickr.com/7163/6767596393_8f8b9609ec_d.jpg"
+                 alt="Banksy" />
+            <img class="item" src="http://farm8.staticflickr.com/7004/6767593255_ae68f10fac_d.jpg"
+                 alt="Bristol autumn" />
         </div>
         <ul class="support">
             <li class="chrome">14+</li>
